--- a/index.html
+++ b/index.html
@@ -1,1 +1,105 @@
-replace old html with new design including about me, skills, projects, and contact section.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Laiba Khan | Portfolio</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f4f8fc;
+      color: #1e2a38;
+    }
+    header {
+      background-color: #2b6cb0;
+      color: white;
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+    header img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 4px solid white;
+      margin-bottom: 1rem;
+    }
+    section {
+      padding: 2rem 1rem;
+      max-width: 900px;
+      margin: auto;
+    }
+    h2 {
+      color: #2b6cb0;
+      margin-top: 2rem;
+    }
+    .skills, .projects, .contact {
+      background-color: #e3f2fd;
+      border-radius: 8px;
+      padding: 1rem;
+      margin-top: 1rem;
+    }
+    a {
+      color: #2b6cb0;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      text-align: center;
+      padding: 2rem;
+      background-color: #2b6cb0;
+      color: white;
+      margin-top: 2rem;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <img src="laiba.jpeg.jpeg" alt="Laiba Khan">
+    <h1>Laiba Khan</h1>
+    <p>Web Developer & Designer</p>
+  </header>
+
+  <section>
+    <h2>About Me</h2>
+    <p>
+      I'm a web developer and designer currently doing my study alongside. I already have experience working with clients, and after taking a break for studies, I’m now restarting my career while continuing my education.
+    </p>
+
+    <h2>Skills</h2>
+    <div class="skills">
+      <ul>
+        <li>JavaScript</li>
+        <li>WordPress</li>
+        <li>Elementor</li>
+        <li>HTML & CSS</li>
+        <li>Responsive Design</li>
+      </ul>
+    </div>
+
+    <h2>Projects</h2>
+    <div class="projects">
+      <p>Check out my projects on:</p>
+      <ul>
+        <li><a href="https://github.com/laibadeveloper" target="_blank">GitHub</a></li>
+        <li><a href="https://www.behance.net//laibakhan161" target="_blank">Behance</a></li>
+      </ul>
+    </div>
+
+    <h2>Contact Me</h2>
+    <div class="contact">
+      <p>Email: <a href="mailto:laibakhan.web55@gmail.com">laibakhan.web55@gmail.com</a></p>
+    </div>
+  </section>
+
+  <footer>
+    &copy; 2025 Laiba Khan | Portfolio
+  </footer>
+
+</body>
+</html>
